--- a/mobile76.cabal
+++ b/mobile76.cabal
@@ -34,7 +34,7 @@ executable fac
 
 executable geo
   main-is:            geo.hs
-  build-depends:      base, random
+  build-depends:      base, random, containers
   default-language:   Haskell2010
 
 executable hrt1
