--- a/mobile76.cabal
+++ b/mobile76.cabal
@@ -27,6 +27,11 @@ executable dates
   build-depends:      base, time
   default-language:   Haskell2010
 
+executable elo
+  main-is:            elo.hs
+  build-depends:      base
+  default-language:   GHC2024
+
 executable fac
   main-is:            fac.hs
   build-depends:      base
