--- a/mobile76.cabal
+++ b/mobile76.cabal
@@ -117,6 +117,11 @@ executable serve
   build-depends:      base, servant-server, wai, warp, text, http-types, servant-blaze, blaze-html
   default-language:   GHC2024
 
+executable svd
+  main-is:            svd.hs
+  build-depends:      base, containers, vector, hmatrix
+  default-language:   GHC2024
+
 executable system
   main-is:            system.hs
   build-depends:      base, process, directory
